@@ -4,12 +4,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod; // Import HttpMethod
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity; // Re-added
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -32,7 +32,7 @@ import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true) // IMPORTANT: Re-enabled @PreAuthorize
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
     @Autowired
@@ -48,22 +48,19 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(csrf -> csrf.disable())
-                // .cors() is now handled by the FilterRegistrationBean bean with
-                // HIGHEST_PRECEDENCE
-                // so we don't need to configure it here again.
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/**", "/error").permitAll()
-                        // IMPORTANT: Permit OPTIONS requests for all paths before any other
-                        // authorization rules
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
+                        // IMPORTANT: Added the new endpoint for ADMIN
+                        .requestMatchers("/api/users").hasAuthority("ADMIN")
+                        
                         // Admin-specific endpoints
                         .requestMatchers("/api/employees/**").hasAuthority("ADMIN")
                         .requestMatchers("/api/payroll/admin/**").hasAuthority("ADMIN")
                         .requestMatchers("/api/settings/**").hasAuthority("ADMIN")
                         .requestMatchers("/api/reports/**").hasAuthority("ADMIN")
-                        .requestMatchers("/api/user-roles/**").hasAuthority("ADMIN") // Corrected based on
-                                                                                     // UserRoleController
+                        .requestMatchers("/api/user-roles/**").hasAuthority("ADMIN")
                         .requestMatchers("/api/attendance/admin/**", "/api/leave-requests/admin/**")
                         .hasAuthority("ADMIN")
                         .requestMatchers("/api/salary-components/**").hasAuthority("ADMIN")
@@ -79,17 +76,10 @@ public class SecurityConfig {
                         .hasAnyAuthority("USER", "ADMIN")
                         .requestMatchers("/api/attendance/my/**", "/api/attendance/clock/**")
                         .hasAnyAuthority("USER", "ADMIN")
-                        .requestMatchers("/api/my-profile/**").hasAnyAuthority("USER", "ADMIN") // Corrected to cover
-                                                                                                // /api/my-profile/upload-picture
-                        .requestMatchers("/api/announcements").hasAnyAuthority("USER", "ADMIN") // GET for all
-                                                                                                // announcements
-                        .requestMatchers("/api/users/change-password").hasAnyAuthority("USER", "ADMIN") // Assuming this
-                                                                                                        // is the
-                                                                                                        // correct
-                                                                                                        // endpoint for
-                                                                                                        // change
-                                                                                                        // password
-                        .anyRequest().authenticated() // All other requests require authentication
+                        .requestMatchers("/api/my-profile/**").hasAnyAuthority("USER", "ADMIN")
+                        .requestMatchers("/api/announcements").hasAnyAuthority("USER", "ADMIN")
+                        .requestMatchers("/api/users/change-password").hasAnyAuthority("USER", "ADMIN")
+                        .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider())
@@ -102,22 +92,14 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-
         config.setAllowCredentials(true);
-
         List<String> allowedOriginsList = Arrays.stream(frontendOrigins.split(","))
                 .map(String::trim)
                 .collect(Collectors.toList());
-
         config.setAllowedOriginPatterns(allowedOriginsList);
-
-        // Ensure OPTIONS is explicitly allowed here too, though the SecurityFilterChain
-        // permitAll is key
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        config.setAllowedHeaders(List.of("*")); // Allow all headers for simplicity, refine for production
-        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type")); // Expose headers if frontend needs to
-                                                                                  // read them
-
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
         source.registerCorsConfiguration("/**", config);
         return source;
     }
@@ -140,13 +122,11 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    // This bean registers the CorsFilter at the highest precedence,
-    // ensuring it runs before Spring Security's filter chain.
     @Bean
     public FilterRegistrationBean<CorsFilter> corsFilterRegistrationBean() {
         FilterRegistrationBean<CorsFilter> bean = new FilterRegistrationBean<>(
                 new CorsFilter(corsConfigurationSource()));
-        bean.setOrder(Ordered.HIGHEST_PRECEDENCE); // This ensures it runs before Spring Security's filters
+        bean.setOrder(Ordered.HIGHEST_PRECEDENCE);
         return bean;
     }
 }
